--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>test</title>
 </head>
 <body>
-	<iframe src="http://test.soviet.com.ar/sf/gob/"></iframe>
-	
+	<iframe src="http://test.soviet.com.ar/sf/gob/" width="100%" height="100% ></iframe>
+
 </body>
 </html>
